[package]
name = "quadio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.21.0", features = ["persistence"] }
egui = "0.21.0"
l = "0.1.0"
num-complex = "0.4.3"
serde = "1.0.152"
slotmap = "1.0.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

